# gwrefpy

./: .buildinfo  .gitignore  LICENSE  README.md  about.html  apidocs.html  constants.html  genindex.html  index.html  io.html  model.html  objects.inv  plotting.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  user_guide.html  well.html
.github/workflows/: build-docs.yml  publish_on_pypi.yml  test-and-lint.yml  test.yml
_modules/: index.html
_modules/src/gwrefpy/: model.html  well.html
_modules/src/gwrefpy/io/: io.html
_sources/: apidocs.rst.txt  index.rst.txt  model.rst.txt  plotting.rst.txt
docs/: about.rst  apidocs.rst  conf.py  constants.rst  index.rst  io.rst  make.bat  plotting.rst  user_guide.rst  well.rst
docs/tutorials/: index.rst  logging_save_and_load.ipynb  plotting.ipynb  quickstart.ipynb
examples/: OBS_qst.csv  REF_qst.csv  quickstart.ipynb
examples/data/: OBS_qst.csv  REF_qst.csv
src/gwrefpy/: __init__.py  _fit.py  constants.py  fitresults.py  model.py  plotter.py  well.py
src/gwrefpy/io/: __init__.py  io.py
src/gwrefpy/methods/: linregressfit.py  timeseries.py
src/gwrefpy/utils/: __init__.py  conversions.py  decorators.py  logger_config.py
tests/: __init__.py  conftest.py  decorators.py  test_fitting.py  test_lagga2.csv  test_model.py  test_plotter.py  test_timeseries.py  test_well.py
tutorials/: index.html  quickstart.html
