[project]
name = "gwrefpy"
version = "0.1.0"
description = "A python implementation of the Akvifär reference method for detecting deviations in groundwater level time series."
readme = "README.md"
authors = [{ name = "Anders Retzner", email = "anders.retzner@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
